# election-map

./: .gitignore  LICENSE  README.md  pyproject.toml
election_map/src/: preprocess_data.py
tests/functional_tests/: test_preprocess_election_data.py
