[tool.poetry]
name = "election_map"
version = "0.1.0"
description = "A Python module to visualize election results by locality on a map."
authors = ["Pierre Pessarossi <pierre.pessarossi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0"
geopy = "^2.2.0"
folium = "^0.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

